# chuks_numpy

./: .gitignore  README.md  chuks.json  smoke.chuks
.github/workflows/: release.yml
docs/: README.md  api-index.md  examples.md  getting-started.md  ndarray.md  numpy.md  user-guide.md
shim/: Cargo.toml
shim/src/: lib.rs
src/: index.chuks
tests/: axisslice_smoke.chuks  index.test.chuks  nu5b_arrow_cdi.test.chuks  nu5b_duckdb_demo.chuks  smoke.chuks  smoke_import.chuks
